index.css
body {
    background-image: url("image/glass-of-water.jpg");
    background-size: cover;
    font-family: "Oswald", sans-serif;
    font-weight: bold;
    text-align: center;
    height: 100vh;
    color: #c59a6c;
}

#container {
    max-width: 550px;
    margin: 50px auto;
    background-color: rgba(23, 23, 23, 0.5);
    padding: 20px;
    border: 3px solid #c59a6c;
    border-radius: 20px;
}

h1 {
    margin-top: 10px;
    margin-bottom: 10px;
}

#underline {
    border-bottom: 3px solid #c59a6c;
    width: 395px;
    margin: 10px auto;
}

h2 {
    font-size: 50px;
    margin-top: 0;
    margin-bottom: 10px;
}

button {
    padding: 10px;
    margin: 8px;
    color: #c59a6c;
    font-weight: bold;
    width: 180px;
    border: 3px solid #c59a6c;
    border-radius: 10px;
    background-color: #171717;
    font-family: "Oswald", sans-serif;
}

button:hover {
    background-color: #c59a6c;
    color: #171717;
    border-color: #d4af80;
    cursor: pointer;
}

#water-entries-el {
    border: 3px solid #c59a6c;
    border-radius: 10px;
    background-color: #171717;
    margin: 8px;
    padding: 8px;
    font-size: 14px;
}

@media (orientation: portrait) and (max-width: 480px) {
    #underline {
        width: 295px
    }
  }

